--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ url = https://github.com/Garyzan/euler-828
 author = Timo van Meegdenburg
 license = GPLv3
 license_files = LICENSE
+version = 0.1.0
 classifiers = 
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.10.14
