--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,8 @@ classifiers =
 [options]
 python_requires = >=3.10
 packages = euler828
+install_requires =
+    seaborn >= 0.11
 
 [options.extras_require]
 testing =
